@@ -2,9 +2,10 @@
   BF: Build: Correction of the release info process
   BF: Launcher: Correction of the behavior when the screen resolution changes
       Triggers the update of the user interface.
-  CR: Launcher: Scaling of icons depending on screen resolution
-      for aesthetic reasons
+  CR: Launcher: Scaling of icons depending on screen resolution (aesthetic reasons)
   CR: Launcher: Increase from the default value of OPACITY (95)
+  CR: Launcher: Added option AutoScale (default true)
+      Scales the view according to the screen resolution ot the primary screen
   
 1.0.1 20220401
   BF: Build: Correction of the version number
